--- a/VideoApp/VideoApp/Views/VideoView/VideoView.xib
+++ b/VideoApp/VideoApp/Views/VideoView/VideoView.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -11,7 +12,7 @@
             <connections>
                 <outlet property="contentView" destination="iN0-l3-epB" id="7YG-bY-dc9"/>
                 <outlet property="errorView" destination="oUq-rY-4AT" id="TS4-JH-iur"/>
-                <outlet property="videoView" destination="bnz-gB-mOY" id="MBx-ul-59g"/>
+                <outlet property="videoView" destination="bnz-gB-mOY" id="aYe-NV-tKk"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -19,9 +20,9 @@
             <rect key="frame" x="0.0" y="0.0" width="338" height="543"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bnz-gB-mOY" userLabel="Video" customClass="TVIVideoView">
+                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bnz-gB-mOY" userLabel="Video">
                     <rect key="frame" x="0.0" y="0.0" width="338" height="543"/>
-                    <color key="backgroundColor" red="0.1999788582" green="0.20001345870000001" blue="0.1999712884" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <color key="backgroundColor" systemColor="systemGreenColor"/>
                 </view>
                 <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oUq-rY-4AT" userLabel="Error">
                     <rect key="frame" x="0.0" y="0.0" width="338" height="543"/>
@@ -64,5 +65,8 @@
     </objects>
     <resources>
         <image name="Error" width="40" height="40"/>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
     </resources>
 </document>
