--- a/VideoApp/VideoApp/Storyboards/Base.lproj/Main.storyboard
+++ b/VideoApp/VideoApp/Storyboards/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Oqf-hp-6pe">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Oqf-hp-6pe">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -546,10 +546,23 @@
                                         </connections>
                                     </collectionView>
                                     <stackView opaque="NO" contentMode="bottom" axis="vertical" alignment="bottom" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="JQ7-UY-R10" userLabel="Buttons">
-                                        <rect key="frame" x="346" y="682" width="48" height="160"/>
+                                        <rect key="frame" x="346" y="626" width="48" height="216"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xjQ-ct-136" userLabel="Mic" customClass="CircleToggleButton" customModule="VideoApp" customModuleProvider="target">
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OiU-WZ-fMj" userLabel="Chat" customClass="CircleButton" customModule="VideoApp" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="0.0" width="48" height="48"/>
+                                                <color key="backgroundColor" red="0.87835419179999996" green="0.87848073240000002" blue="0.87832647559999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="OiU-WZ-fMj" secondAttribute="height" multiplier="1:1" id="09L-xX-PIZ"/>
+                                                </constraints>
+                                                <state key="normal" title="Chat">
+                                                    <color key="titleColor" systemColor="labelColor"/>
+                                                </state>
+                                                <connections>
+                                                    <segue destination="mb7-gW-cnd" kind="show" id="d5f-i1-Yyh"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xjQ-ct-136" userLabel="Mic" customClass="CircleToggleButton" customModule="VideoApp" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="56" width="48" height="48"/>
                                                 <color key="backgroundColor" red="0.87835419179999996" green="0.87848073240000002" blue="0.87832647559999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="xjQ-ct-136" secondAttribute="height" multiplier="1:1" id="eDX-xC-6E1"/>
@@ -558,7 +571,7 @@
                                                 <state key="selected" image="unmute-audio"/>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sqN-Vg-1NI" userLabel="Camera" customClass="CircleToggleButton" customModule="VideoApp" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="56" width="48" height="48"/>
+                                                <rect key="frame" x="0.0" y="112" width="48" height="48"/>
                                                 <color key="backgroundColor" red="0.87835419179999996" green="0.87848073240000002" blue="0.87832647559999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="sqN-Vg-1NI" secondAttribute="height" multiplier="1:1" id="9pk-gy-JO2"/>
@@ -567,7 +580,7 @@
                                                 <state key="selected" image="unmute-video"/>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dW2-aV-srT" userLabel="Leave" customClass="CircleButton" customModule="VideoApp" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="112" width="48" height="48"/>
+                                                <rect key="frame" x="0.0" y="168" width="48" height="48"/>
                                                 <color key="backgroundColor" red="0.94904273750000001" green="0.18432870509999999" blue="0.27451074120000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <accessibility key="accessibilityConfiguration" identifier="leaveRoomButton"/>
                                                 <constraints>
@@ -584,6 +597,7 @@
                                             <constraint firstItem="dW2-aV-srT" firstAttribute="width" secondItem="JQ7-UY-R10" secondAttribute="width" id="Ffi-a1-4Zd"/>
                                             <constraint firstItem="sqN-Vg-1NI" firstAttribute="width" secondItem="JQ7-UY-R10" secondAttribute="width" id="Gww-IE-cVc"/>
                                             <constraint firstAttribute="width" constant="48" id="kA4-dE-nDr"/>
+                                            <constraint firstAttribute="width" secondItem="OiU-WZ-fMj" secondAttribute="width" id="yFu-pR-wU3"/>
                                         </constraints>
                                     </stackView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nyO-2I-nos" userLabel="Main identity">
@@ -822,7 +836,7 @@
                     </constraints>
                 </view>
             </objects>
-            <point key="canvasLocation" x="897" y="450"/>
+            <point key="canvasLocation" x="-762" y="2961"/>
         </scene>
         <!--Settings-->
         <scene sceneID="JYB-aD-ZXg">
@@ -872,6 +886,79 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="t3A-G4-hfI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1303" y="1256"/>
+        </scene>
+        <!--Chat-->
+        <scene sceneID="TH8-bM-ilR">
+            <objects>
+                <tableViewController id="eCA-nu-fGd" customClass="ChatViewController" customModule="VideoApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="dvg-6T-wf6">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MessageCell" textLabel="aqP-8H-klQ" detailTextLabel="IHH-YR-Ffa" style="IBUITableViewCellStyleSubtitle" id="2qT-4S-60X">
+                                <rect key="frame" x="0.0" y="28" width="414" height="55.5"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="2qT-4S-60X" id="w1J-zX-zMG">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="55.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="aqP-8H-klQ">
+                                            <rect key="frame" x="20" y="10" width="33" height="20.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Detail" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="IHH-YR-Ffa">
+                                            <rect key="frame" x="20" y="31.5" width="33" height="14.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="eCA-nu-fGd" id="c7P-6V-duR"/>
+                            <outlet property="delegate" destination="eCA-nu-fGd" id="HRI-sh-Pq3"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Chat" id="S2O-uX-llk">
+                        <barButtonItem key="leftBarButtonItem" systemItem="compose" id="ChL-qq-ZII">
+                            <connections>
+                                <action selector="composeTap:" destination="eCA-nu-fGd" id="f4X-pd-ZEN"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="done" id="zEd-t8-gY0">
+                            <connections>
+                                <action selector="doneTap:" destination="eCA-nu-fGd" id="L8q-rs-7Zg"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6re-ho-Doc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2184" y="449"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="tNt-8n-aIl">
+            <objects>
+                <navigationController id="mb7-gW-cnd" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="RQO-Pk-Saz"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="W67-M3-MLU">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="eCA-nu-fGd" kind="relationship" relationship="rootViewController" id="cfI-Ao-RVb"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="81e-13-uAy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1291" y="449"/>
         </scene>
         <!--Options-->
         <scene sceneID="GWF-HR-Ptl">
@@ -936,6 +1023,9 @@
         <image name="unmute-video" width="20" height="20"/>
         <image name="video-logo-login" width="74" height="57"/>
         <image name="video-logo-splash" width="134" height="102"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
