--- a/VideoApp/VideoApp/Storyboards/Base.lproj/Main.storyboard
+++ b/VideoApp/VideoApp/Storyboards/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Oqf-hp-6pe">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Oqf-hp-6pe">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -546,7 +546,7 @@
                                         </connections>
                                     </collectionView>
                                     <stackView opaque="NO" contentMode="bottom" axis="vertical" alignment="bottom" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="JQ7-UY-R10" userLabel="Buttons">
-                                        <rect key="frame" x="346" y="682" width="48" height="160"/>
+                                        <rect key="frame" x="346" y="626" width="48" height="216"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xjQ-ct-136" userLabel="Mic" customClass="CircleToggleButton" customModule="VideoApp" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="0.0" width="48" height="48"/>
@@ -566,8 +566,21 @@
                                                 <state key="normal" image="mute-video"/>
                                                 <state key="selected" image="unmute-video"/>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dW2-aV-srT" userLabel="Leave" customClass="CircleButton" customModule="VideoApp" customModuleProvider="target">
+                                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OiU-WZ-fMj" userLabel="Chat" customClass="CircleButton" customModule="VideoApp" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="112" width="48" height="48"/>
+                                                <color key="backgroundColor" red="0.87835419179999996" green="0.87848073240000002" blue="0.87832647559999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="OiU-WZ-fMj" secondAttribute="height" multiplier="1:1" id="09L-xX-PIZ"/>
+                                                </constraints>
+                                                <state key="normal" title="Chat">
+                                                    <color key="titleColor" systemColor="labelColor"/>
+                                                </state>
+                                                <connections>
+                                                    <segue destination="mb7-gW-cnd" kind="show" identifier="" id="d5f-i1-Yyh"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dW2-aV-srT" userLabel="Leave" customClass="CircleButton" customModule="VideoApp" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="168" width="48" height="48"/>
                                                 <color key="backgroundColor" red="0.94904273750000001" green="0.18432870509999999" blue="0.27451074120000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <accessibility key="accessibilityConfiguration" identifier="leaveRoomButton"/>
                                                 <constraints>
@@ -584,6 +597,7 @@
                                             <constraint firstItem="dW2-aV-srT" firstAttribute="width" secondItem="JQ7-UY-R10" secondAttribute="width" id="Ffi-a1-4Zd"/>
                                             <constraint firstItem="sqN-Vg-1NI" firstAttribute="width" secondItem="JQ7-UY-R10" secondAttribute="width" id="Gww-IE-cVc"/>
                                             <constraint firstAttribute="width" constant="48" id="kA4-dE-nDr"/>
+                                            <constraint firstAttribute="width" secondItem="OiU-WZ-fMj" secondAttribute="width" id="yFu-pR-wU3"/>
                                         </constraints>
                                     </stackView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nyO-2I-nos" userLabel="Main identity">
@@ -688,6 +702,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="s3x-XD-RUN"/>
                     <connections>
+                        <outlet property="chatButton" destination="OiU-WZ-fMj" id="Zrp-pY-ain"/>
                         <outlet property="disableCameraButton" destination="sqN-Vg-1NI" id="y5T-Nf-psh"/>
                         <outlet property="disableMicButton" destination="xjQ-ct-136" id="Gjm-8P-1Sd"/>
                         <outlet property="leaveButton" destination="dW2-aV-srT" id="V6o-I0-16I"/>
@@ -822,7 +837,7 @@
                     </constraints>
                 </view>
             </objects>
-            <point key="canvasLocation" x="897" y="450"/>
+            <point key="canvasLocation" x="-762" y="2961"/>
         </scene>
         <!--Settings-->
         <scene sceneID="JYB-aD-ZXg">
@@ -872,6 +887,45 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="t3A-G4-hfI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1303" y="1256"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="tNt-8n-aIl">
+            <objects>
+                <navigationController id="mb7-gW-cnd" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="RQO-Pk-Saz"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="W67-M3-MLU">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="sC1-s8-BYs" kind="relationship" relationship="rootViewController" id="F7y-on-85c"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="81e-13-uAy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1291" y="449"/>
+        </scene>
+        <!--Chat-->
+        <scene sceneID="ORJ-1X-Iuk">
+            <objects>
+                <viewController id="sC1-s8-BYs" customClass="ChatViewController" customModule="VideoApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="RIg-xj-dAW">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="emU-YU-nLT"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Chat" id="BNo-pd-rzu">
+                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="done" id="NFQ-s1-YT7">
+                            <connections>
+                                <action selector="doneTap:" destination="sC1-s8-BYs" id="dPu-hp-dt1"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0sk-98-31V" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2229" y="450"/>
         </scene>
         <!--Options-->
         <scene sceneID="GWF-HR-Ptl">
@@ -936,6 +990,9 @@
         <image name="unmute-video" width="20" height="20"/>
         <image name="video-logo-login" width="74" height="57"/>
         <image name="video-logo-splash" width="134" height="102"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
