--- a/VideoApp/VideoApp/Storyboards/Base.lproj/Main.storyboard
+++ b/VideoApp/VideoApp/Storyboards/Base.lproj/Main.storyboard
@@ -566,13 +566,13 @@
                                                 <state key="normal" image="mute-video"/>
                                                 <state key="selected" image="unmute-video"/>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OiU-WZ-fMj" userLabel="Chat" customClass="ChatButton" customModule="VideoApp" customModuleProvider="target">
+                                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OiU-WZ-fMj" userLabel="Chat" customClass="CircleButton" customModule="VideoApp" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="112" width="48" height="48"/>
                                                 <color key="backgroundColor" red="0.87835419179999996" green="0.87848073240000002" blue="0.87832647559999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="OiU-WZ-fMj" secondAttribute="height" multiplier="1:1" id="09L-xX-PIZ"/>
                                                 </constraints>
-                                                <state key="normal" image="ChatButtonWithoutUnreadMessage">
+                                                <state key="normal" title="Chat">
                                                     <color key="titleColor" systemColor="labelColor"/>
                                                 </state>
                                                 <connections>
@@ -984,7 +984,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="ChatButtonWithoutUnreadMessage" width="22" height="22"/>
         <image name="hangup" width="26" height="10"/>
         <image name="mute-audio" width="12" height="16"/>
         <image name="mute-video" width="20" height="20"/>
